--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -29,5 +29,12 @@
             android:textColor="@color/colorText"
             android:textSize="16sp" />
 
+        <TextView
+            android:id="@+id/authors"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/colorText"
+            android:textSize="16sp" />
+
     </LinearLayout>
 </android.support.v7.widget.CardView>
